@@ -283,6 +283,13 @@ bool netlist::Instance::update_ports() {
   return true;
 }
 
+bool netlist::Instance::elaborate(const ctype_t mctype) {
+  bool rv = true;
+
+  return rv;
+
+}
+
 bool netlist::Instance::elaborate(std::deque<boost::shared_ptr<Module> >& mfifo, 
                                   std::map<MIdentifier, boost::shared_ptr<Module> > & mmap) {
   bool rv = true;
