@@ -1,4 +1,5 @@
 ##### Fri 08/06/2012
+* Rewrite update_name() in Module to calculate_name(). Now it is a const function without any side effect in the module.
 
 ##### Thu 07/06/2012
 * Fix the no-load problem.
